# loongcollector

./: .clang-format  .clangd  .gitignore  .gitmodules  .golangci.yml  Makefile  README.md  go.mod  go.sum  plugins.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmark.yaml  build-core-ut.yaml  build-core-windows.yaml  build-core.yaml  build-pure-plugin.yaml  build.yaml  e2e-framework.yaml  e2e.yaml  static-check.yaml
config_server/: README.md
config_server/service/: Dockerfile
core/: CMakeLists.txt  dependencies.cmake  links.cmake  logtail.cpp  logtail_windows.cpp
core/app_config/: AppConfig.cpp  AppConfig.h
core/application/: Application.cpp  Application.h
core/checkpoint/: AdhocCheckpointManager.cpp  CheckPointManager.cpp  CheckPointManager.h  CheckpointManagerV2.cpp  CheckpointManagerV2.h
core/collection_pipeline/: CollectionPipeline.cpp  CollectionPipeline.h  CollectionPipelineManager.cpp  CollectionPipelineManager.h  GlobalConfig.cpp
core/common/: CapabilityUtil.cpp  CapabilityUtil.h  CrashBackTraceUtil.cpp  CrashBackTraceUtil.h  DynamicLibHelper.cpp  EncodingConverter.cpp  EncodingUtil.cpp  EncodingUtil.h  FileSystemUtil.cpp  FileSystemUtil.h  HashUtil.cpp  HashUtil.h  JsonUtil.cpp  LRUCache.h  Lock.h  LogtailCommonFlags.cpp  LogtailCommonFlags.h  MachineInfoUtil.cpp  MachineInfoUtil.h  NetworkUtil.cpp  NetworkUtil.h  ParamExtractor.h  ProcParser.cpp  ProcParser.h  RandomUtil.cpp  RuntimeUtil.cpp  Span.h  StringTools.cpp  StringTools.h  StringView.h  TimeKeeper.cpp  TimeKeeper.h  TimeUtil.cpp  TimeUtil.h  WaitObject.h  common.cmake  links.cmake
core/config/: CollectionConfig.h
core/constants/: EntityConstants.cpp  EntityConstants.h  TagConstants.cpp  TagConstants.h
core/ebpf/: Config.cpp  Config.h  EBPFAdapter.cpp  EBPFAdapter.h  EBPFServer.cpp  EBPFServer.h  SelfMonitor.cpp  SourceManager.h  eBPFServer.cpp
core/ebpf/driver/: BPFMapTraits.h  BPFWrapper.h  CMakeLists.txt  CallName.h  IdAllocator.h  Log.cpp  Log.h  NetworkFilter.cpp  NetworkFilter.h  eBPFDriver.cpp  eBPFDriver.h
core/file_server/: ConfigManager.cpp  ConfigManager.h  ContainerInfo.cpp  ContainerInfo.h  EventDispatcher.cpp  EventDispatcher.h  FileDiscoveryOptions.cpp  FileDiscoveryOptions.h  FileServer.cpp  MultilineOptions.cpp
core/forward/: BaseService.h  GrpcInputManager.cpp  GrpcInputManager.h
core/go_pipeline/: LogtailPlugin.cpp  LogtailPlugin.h
core/host_monitor/: Constants.cpp  Constants.h  HostMonitorInputRunner.cpp  HostMonitorInputRunner.h  HostMonitorTimerEvent.cpp  HostMonitorTimerEvent.h  LinuxSystemInterface.cpp  LinuxSystemInterface.h  SystemInformationTools.cpp  SystemInformationTools.h  SystemInterface.cpp  SystemInterface.h
core/logger/: Logger.cpp  Logger.h
core/metadata/: ContainerInfo.h  ContainerMetadata.cpp  ContainerMetadata.h  K8sMetadata.cpp  K8sMetadata.h
core/models/: MetricEvent.cpp  MetricEvent.h  MetricValue.cpp  MetricValue.h  PipelineEvent.cpp  PipelineEvent.h  SizedContainer.h
core/monitor/: AlarmManager.cpp  AlarmManager.h  MetricManager.cpp  MetricManager.h  Monitor.cpp  Monitor.h  SelfMonitorServer.cpp
core/parser/: DelimiterModeFsmParser.h
core/prometheus/: Constants.h  PromSelfMonitor.cpp  PrometheusInputRunner.cpp  PrometheusInputRunner.h  Utils.cpp  Utils.h
core/provider/: CMakeLists.txt
core/runner/: FlusherRunner.cpp  InputRunner.cpp  InputRunner.h  ProcessorRunner.cpp  ProcessorRunner.h
core/unittest/: CMakeLists.txt  Unittest.h  UnittestHelper.h
core/unittest/ebpf/: AggregatorUnittest.cpp  BPFMapTraitsUnittest.cpp  BPFWrapperUnittest.cpp  CMakeLists.txt  CommonUtilUnittest.cpp  ConnectionManagerUnittest.cpp  ConnectionUnittest.cpp  ConvergerUnittest.cpp  EBPFAdapterUnittest.cpp  EBPFDriverLogUnittest.cpp  EBPFRawEventStub.h  EBPFServerUnittest.cpp  IdAllocatorUnittest.cpp  ManagerUnittest.cpp  NetworkObserverEventUnittest.cpp  NetworkObserverUnittest.cpp  ProcFsStub.h  ProcessCacheManagerUnittest.cpp  ProcessCacheManagerWrapper.h  ProcessCacheUnittest.cpp  ProcessCacheValueUnittest.cpp  ProcessCleanupRetryableEventUnittest.cpp  ProcessCloneRetryableEventUnittest.cpp  ProcessDataMapUnittest.cpp  ProcessExecveRetryableEventUnittest.cpp  ProcessExitRetryableEventUnittest.cpp  ProcessSyncRetryableEventUnittest.cpp  ProtocolParserUnittest.cpp  RetryableEventUnittest.cpp  SamplerUnittest.cpp  TableUnittest.cpp  TraceIdBenchmark.cpp  WorkerUnittest.cpp  eBPFDriverUnittest.cpp  eBPFServerUnittest.cpp
core/unittest/host_monitor/: CMakeLists.txt  CPUCollectorUnittest.cpp  HostMonitorInputRunnerUnittest.cpp  LinuxSystemInterfaceUnittest.cpp  MemCollectorUnittest.cpp  MetricCalculateUnittest.cpp  MockCollector.h  MockSystemInterface.h  ProcessEntityCollectorUnittest.cpp  SystemCollectorUnittest.cpp  SystemInformationToolsUnittest.cpp  SystemInterfaceUnittest.cpp
docker/: Dockerfile.e2e-test  Dockerfile_build  Dockerfile_coverage  Dockerfile_development_part  Dockerfile_e2e  Dockerfile_edge_linux  Dockerfile_goc  Dockerfile_htsc_minimal  Dockerfile_htsc_plugin_go  Dockerfile_production  Dockerfile_production_minimal  README.md
docs/cn/: README.md  SUMMARY.md
licenses/: LICENSE_OF_ILOGTAIL_DEPENDENCIES.md  LICENSE_OF_TESTENGINE_DEPENDENCIES.md
pkg/: go.mod  go.sum
pkg/flags/: flags.go
pkg/helper/: collector_imp.go  docker_center.go  local_context.go  (+5 more)
plugin_main/: plugin_export.go  plugin_http.go  plugin_main_test.go
pluginmanager/: config_update_test.go  container_config_manager.go  container_config_manager_test.go  context_imp.go  logstore_config.go  metric_export.go  plugin_manager.go  plugin_runner_helper.go  plugin_runner_v1.go  plugin_runner_v2.go  plugin_wrapper.go  plugin_wrapper_aggregator_v2.go  plugin_wrapper_processor_v2.go  self_telemetry_container_config.go
scripts/: benchmark_collect_result.sh  build_edge_linux.sh  check_cpu_instruction.sh  check_dependencies.sh  check_glibc.sh  dist.sh  docker_build.sh  e2e.sh  gen_build_scripts.sh  plugin_build.sh  run_core_ut.sh  windows64_build.bat  windows64_build_core_ut.bat  windows64_run_core_ut.bat
test/: go.mod  go.sum
(+603 files in other folders)
